--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <!-- <script src="main.js" defer></script> -->
+    </head>
+<body>
 <h1>Menu</h1>
+<article></article>
 <article class="menu">
-    <h2>Tuna</h2>
-    <section class="menu__item">Tuna Soup</section>
-    <section class="menu__item">Tuna Sandwich</section>
-    <section class="menu__item">Grilled Tuna</section>
+    <h2 id="species"></h2>
+    <section id="soup"></section>
+    <section id="sandwich"></section>
+    <section id="grilled"></section>
 </article>
+<script type="module" src="masterTest.js"></script>
+</body>
+</html>
+
