--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     </head>
 <body>
 <h1>Menu</h1>
-<article></article>
 <article class="menu">
     <h2 id="species"></h2>
-    <section id="soup"></section>
-    <section id="sandwich"></section>
-    <section id="grilled"></section>
+    <section id="soup" class="menu__item"></section>
+    <section id="sandwich" class="menu__item"></section>
+    <section id="grilled" class="menu__item"></section>
 </article>
-<script type="module" src="masterTest.js"></script>
+<script type="module" src="main.js"></script>
 </body>
 </html>
 
